2007-10-27  Juanma Barranquero  <lekktu@gmail.com>

	* desktop.el (desktop-load-locked-desktop, desktop-base-lock-name)
	(desktop-not-loaded-hook): Fix :version tags.

2007-10-27  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-wrong-passwd-regexp): Tune regexp.
	(tramp-get-remote-tmpdir): New defun.
	(tramp-make-tramp-temp-file): Use it.
	(tramp-local-call-process): New defun.  Replace all calls of
	`call-process' by this when appropriate.
	(tramp-handle-write-region): Replace calls of `file-attributes' by
	`tramp-compat-file-attributes'.
	(tramp-find-shell, tramp-open-connection-setup-interactive-shell):
	Make the first command a `tramp-send-command' call, with let-bind
	of `tramp-end-of-output'.
	(tramp-version, tramp-bug, tramp-reporter-dump-variable)
	(tramp-load-report-modules, tramp-append-tramp-buffers):
	Move to tramp-cmds.el.

	* net/tramp-fish.el (tramp-fish-handle-copy-file)
	(tramp-fish-do-copy-or-rename-file)
	(tramp-fish-do-copy-or-rename-file-directly):
	* net/tramp-smb.el (tramp-smb-handle-copy-file):
	Add parameter PRESERVE-UID-GID.

2007-10-27  Eli Zaretskii  <eliz@gnu.org>

	* time.el (zoneinfo-style-world-list, legacy-style-world-list):
	New defcustoms.
	(display-time-world-list): Use them as appropriate for the current
	value of `system-type'.

2007-10-26  Vinicius Jose Latorre  <viniciusjl@ig.com.br>

	* printing.el: Pacify byte compiler, that is, no compiler warnings.
	Move (again) some variable definitions before use, define some fun
	aliases, no code change.
	(pr-version): New version 6.9.2.
	(pr-path-style, pr-auto-region, pr-menu-char-height)
	(pr-menu-char-width, pr-menu-lock, pr-ps-printer-alist)
	(pr-txt-printer-alist, pr-ps-utility-alist): Options declaration
	via (defvar VAR).
	(pr-menu-lookup, pr-menu-lock, pr-menu-alist, pr-even-or-odd-pages)
	(pr-menu-get-item, pr-menu-set-item-name, pr-menu-set-utility-title)
	(pr-menu-set-ps-title, pr-menu-set-txt-title, pr-region-active-p)